--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
   },
   "dependencies": {
     "axios": "^0.21.4",
-    "bin-charts-next": "^1.0.5",
-    "bin-editor-next": "^1.0.5",
-    "bin-ui-next": "^1.0.8",
+    "bin-charts-next": "^1.0.6",
+    "bin-editor-next": "^1.0.6",
+    "bin-ui-next": "^1.0.9",
+    "brace": "^0.11.1",
+    "dayjs": "^1.10.7",
     "echarts": "^5.2.1",
     "good-storage": "^1.1.1",
     "javascript-natural-sort": "^0.7.1",
@@ -33,24 +35,25 @@
     "lodash-es": "^4.17.21",
     "many-keys-map": "^1.0.3",
     "mockjs": "^1.1.0",
+    "sortablejs": "^1.14.0",
     "thenby": "^1.3.4",
+    "vue": "^3.2.20",
     "vue-router": "^4.0.11",
     "vuedraggable": "^4.1.0",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.5",
-    "@babel/preset-env": "^7.15.6",
-    "@types/node": "^16.10.1",
-    "@vitejs/plugin-vue": "^1.9.2",
-    "@vue/compiler-sfc": "^3.2.19",
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "@types/node": "^16.10.3",
+    "@vitejs/plugin-vue": "^1.9.3",
+    "@vue/compiler-sfc": "^3.2.20",
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-vue": "^7.18.0",
+    "eslint-plugin-vue": "^7.19.1",
     "rimraf": "^3.0.2",
     "stylus": "^0.55.0",
-    "vite": "^2.6.2",
-    "vue": "^3.2.19"
+    "vite": "^2.6.5"
   }
 }
