--- a/package.json
+++ b/package.json
@@ -40,9 +40,10 @@
     "mitt": "^3.0.0",
     "mockjs": "^1.1.0",
     "particles.vue3": "^1.41.5",
+    "pinia": "^2.0.17",
     "sortablejs": "^1.14.0",
     "thenby": "^1.3.4",
-    "vue": "^3.2.31",
+    "vue": "^3.2.37",
     "vue-router": "^4.0.12",
     "vuedraggable": "^4.1.0",
     "vuex": "^4.0.2"
