--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-VITE_PUBLIC_PATH=/bin-datav-schema
+VITE_PUBLIC_PATH = /bin-datav-schema
 
-# CDN
-VITE_APP_CDN=https://wangbin3162.gitee.io/bin-files
+# CDN https://wangbin3162.gitee.io/bin-files   or /images
+VITE_APP_CDN = https://wangbin3162.gitee.io/bin-files 
 
