--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "brace": "^0.11.1",
     "dayjs": "^1.10.7",
     "echarts": "^5.3.0",
-    "good-storage": "^1.1.1",
     "javascript-natural-sort": "^0.7.1",
     "js-cookie": "^3.0.1",
     "localforage": "^1.10.0",
@@ -45,8 +44,7 @@
     "thenby": "^1.3.4",
     "vue": "^3.2.37",
     "vue-router": "^4.0.12",
-    "vuedraggable": "^4.1.0",
-    "vuex": "^4.0.2"
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
