--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "bin-editor-next": "^1.1.0",
     "bin-ui-next": "^1.2.7",
     "brace": "^0.11.1",
-    "dayjs": "^1.11.5",
-    "echarts": "^5.3.3",
+    "dayjs": "^1.11.6",
+    "echarts": "^5.4.0",
     "echarts-stat": "^1.2.0",
     "echarts-wordcloud": "^2.0.0",
     "javascript-natural-sort": "^0.7.1",
@@ -40,21 +40,22 @@
     "many-keys-map": "^1.0.3",
     "mitt": "^3.0.0",
     "mockjs": "^1.1.0",
+    "modern-screenshot": "^3.0.0",
     "particles.vue3": "^1.43.1",
-    "pinia": "^2.0.22",
+    "pinia": "^2.0.23",
     "sortablejs": "^1.15.0",
     "thenby": "^1.3.4",
-    "vue": "^3.2.39",
-    "vue-router": "^4.1.5",
+    "vue": "^3.2.41",
+    "vue-router": "^4.1.6",
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.0",
-    "@babel/preset-env": "^7.19.0",
-    "@types/node": "^16.11.58",
+    "@babel/core": "^7.19.6",
+    "@babel/preset-env": "^7.19.4",
+    "@types/node": "^16.18.2",
     "@vitejs/plugin-vue": "^1.10.2",
-    "@vue/compiler-sfc": "^3.2.39",
-    "@vue/shared": "^3.2.39",
+    "@vue/compiler-sfc": "^3.2.41",
+    "@vue/shared": "^3.2.41",
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.26.0",
