--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "thenby": "^1.3.4",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
+    "vue3-lazy": "1.0.0-alpha.1",
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
