--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "echarts": "^5.4.0",
     "echarts-stat": "^1.2.0",
     "echarts-wordcloud": "^2.0.0",
+    "html-to-image": "^1.11.1",
     "javascript-natural-sort": "^0.7.1",
     "js-cookie": "^3.0.1",
     "localforage": "^1.10.0",
@@ -40,7 +41,6 @@
     "many-keys-map": "^1.0.3",
     "mitt": "^3.0.0",
     "mockjs": "^1.1.0",
-    "modern-screenshot": "^3.0.0",
     "particles.vue3": "^1.43.1",
     "pinia": "^2.0.23",
     "sortablejs": "^1.15.0",
