--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "pinia": "^2.0.23",
     "sortablejs": "^1.15.0",
     "thenby": "^1.3.4",
+    "three": "^0.148.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
     "vue3-lazy": "1.0.0-alpha.1",
