--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "echarts": "^5.4.0",
     "echarts-stat": "^1.2.0",
     "echarts-wordcloud": "^2.0.0",
+    "gsap": "^3.11.4",
     "html-to-image": "^1.11.1",
     "js-cookie": "^3.0.1",
     "localforage": "^1.10.0",
@@ -60,6 +61,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-vue": "^7.20.0",
     "rimraf": "^3.0.2",
+    "rollup-plugin-glsl": "^1.3.0",
     "stylus": "^0.55.0",
     "vite": "^2.9.15"
   }
