--- a/package.json
+++ b/package.json
@@ -33,34 +33,35 @@
     "bin-ui-design": "^0.3.1",
     "brace": "^0.11.1",
     "dayjs": "^1.11.10",
-    "echarts": "^5.4.3",
+    "echarts": "^5.5.0",
     "echarts-stat": "^1.2.0",
     "echarts-wordcloud": "^2.1.0",
-    "gsap": "^3.12.3",
+    "gsap": "^3.12.5",
     "html-to-image": "^1.11.11",
     "js-cookie": "^3.0.5",
     "localforage": "^1.10.0",
     "mitt": "^3.0.1",
+    "mockjs": "^1.1.0",
     "particles.vue3": "^1.43.1",
     "pinia": "^2.1.7",
-    "sortablejs": "^1.15.1",
+    "sortablejs": "^1.15.2",
     "swiper": "^8.4.7",
     "three": "^0.148.0",
-    "vue": "^3.3.10",
+    "vue": "^3.4.19",
     "vue-router": "^4.2.5",
     "vue3-lazy": "1.0.0-alpha.1",
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.5",
-    "@babel/preset-env": "^7.23.5",
-    "@types/node": "^16.18.67",
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@types/node": "^16.18.82",
     "@vitejs/plugin-vue": "^1.10.2",
-    "@vue/compiler-sfc": "^3.3.10",
-    "@vue/shared": "^3.3.10",
+    "@vue/compiler-sfc": "^3.4.19",
+    "@vue/shared": "^3.4.19",
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
-    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-vue": "^7.20.0",
     "highlight.js": "^11.9.0",
     "increase-memory-limit": "^1.0.7",
@@ -71,10 +72,10 @@
     "postcss-import": "^15.1.0",
     "postcss-nested": "^6.0.1",
     "prettier": "^2.8.8",
-    "pretty-quick": "^3.1.3",
+    "pretty-quick": "^3.3.1",
     "rimraf": "^3.0.2",
     "rollup-plugin-glsl": "^1.3.0",
     "stylus": "^0.55.0",
-    "vite": "^2.9.16"
+    "vite": "^2.9.17"
   }
 }
